fix: DEV-2669: Ensure filtered transcripts are collapsed

--- a/src/tags/object/Paragraphs/Paragraphs.module.scss
+++ b/src/tags/object/Paragraphs/Paragraphs.module.scss
@@ -77,7 +77,8 @@
   user-select: none;
 
   & > * {
-    visibility: hidden;
+    visibility: hidden !important;
+    opacity: 0;
     height: 1px;
     user-select: none;
   }
